<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_diary"
            android:icon="@drawable/ic_menu_diary"
            android:title="@string/menu_title_diary" />
        <item
            android:id="@+id/menu_import_export"
            android:icon="@drawable/ic_menu_import_export"
            android:title="@string/menu_title_import_export" />
        <item
            android:id="@+id/menu_genre_report"
            android:icon="@drawable/ic_menu_genre_report"
            android:title="@string/menu_title_genre_report" />
        <item
            android:id="@+id/menu_advices"
            android:icon="@drawable/ic_menu_advices"
            android:title="@string/menu_title_advices" />
        <item
            android:id="@+id/menu_reminders"
            android:icon="@drawable/ic_menu_reminders"
            android:title="@string/menu_title_reminders" />
        <item
            android:id="@+id/menu_questionnaire"
            android:icon="@drawable/ic_menu_questionnaire"
            android:title="@string/menu_title_questionnaire" />
        <item
            android:id="@+id/menu_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_title_manage" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
