<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_v2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="cardio_app.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:columnCount="3"
        android:background="@color/colorPrimary">


        <Button
            style="@style/MenuButton"
            android:text="@string/my_profile"
            android:id="@+id/button_my_profile"
            android:drawableTop="@drawable/my_profile"
            android:layout_row="0"
            android:layout_column="0" />

        <Button
            style="@style/MenuButton"
            android:text="@string/reports"
            android:id="@+id/button_reports"
            android:drawableTop="@drawable/reports"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            style="@style/MenuButton"
            android:text="@string/add_measure"
            android:id="@+id/button_add_measure"
            android:layout_row="0"
            android:layout_column="1"
            android:drawableTop="@drawable/add_m"
            android:onClick="addMeasure"/>

        <Button
            style="@style/MenuButton"
            android:text="@string/events_list"
            android:id="@+id/button_events_list"
            android:layout_row="1"
            android:layout_column="1"
            android:drawableTop="@drawable/list_e"/>

        <Button
            style="@style/MenuButton"
            android:text="@string/add_event"
            android:id="@+id/button_add_event"
            android:layout_row="1"
            android:layout_column="0"
            android:drawableTop="@drawable/add_e"/>

        <Button
            style="@style/MenuButton"
            android:text="@string/stats"
            android:id="@+id/button_stats"
            android:drawableTop="@drawable/stats"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            style="@style/MenuButton"
            android:text="@string/drugs"
            android:id="@+id/button_drugs"
            android:layout_row="2"
            android:layout_column="0"
            android:drawableTop="@drawable/drugs"
            android:onClick="showDrugsList"/>

        <Button
            style="@style/MenuButton"
            android:text="@string/alerts"
            android:id="@+id/button_alerts"
            android:layout_row="2"
            android:layout_column="1"
            android:drawableTop="@drawable/alerts"
            android:onClick="showAlertsList"/>

        <Button
            style="@style/MenuButton"
            android:text="@string/measures_list"
            android:id="@+id/button_list_measures"
            android:layout_row="0"
            android:layout_column="2"
            android:drawableTop="@drawable/list_m"
            android:onClick="showMeasuresList"/>

        <Button
            style="@style/MenuButton"
            android:text="@string/import_data"
            android:id="@+id/button_import"
            android:layout_row="3"
            android:layout_column="1"
            android:drawableTop="@drawable/import_ic"/>

        <Button
            style="@style/MenuButton"
            android:text="@string/settings"
            android:id="@+id/button_settings"
            android:drawableTop="@drawable/settings"
            android:layout_row="3"
            android:layout_column="2" />

        <Button
            style="@style/MenuButton"
            android:text="@string/export_data"
            android:id="@+id/button_export"
            android:layout_row="3"
            android:layout_column="0"
            android:drawableTop="@drawable/export"/>
    </GridLayout>
</RelativeLayout>