<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="cardio_app.viewmodel.PressureDataViewModel" />
    </data>

    <GridLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:columnCount="2"
        android:rowCount="5"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/systole"
            android:textStyle="bold" />

        <TextView
            android:text="@{data.systoleStr}"
            android:layout_marginLeft="10dp" />

        <TextView
            android:text="@string/diastole"
            android:textStyle="bold" />

        <TextView
            android:text="@{data.diastoleStr}"
            android:layout_marginLeft="10dp" />

        <TextView
            android:text="@string/pulse"
            android:textStyle="bold" />

        <TextView
            android:text="@{data.pulseStr}"
            android:layout_marginLeft="10dp" />

        <TextView
            android:text="@string/arrhythmia"
            android:textStyle="bold" />

        <TextView
            android:text="@{data.arrhythmiaStr}"
            android:layout_marginLeft="10dp" />

        <TextView
            android:text="@string/date"
            android:textStyle="bold" />

        <TextView
            android:text="@{data.dateTimeStr}"
            android:layout_marginLeft="10dp" />

    </GridLayout>
</layout>
