<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/choose_filter"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:textSize="22sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="cardio_app.activity.filter.FilterActivity"
        tools:showIn="@layout/activity_filter"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RadioButton android:id="@+id/radio_filter_x_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_last_x_days"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_filter_this_moth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_this_month"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_filter_this_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_this_year"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_filter_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_custom"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_filter_no_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_no_filter"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="10sp" />

    <LinearLayout
        android:id="@+id/x_days_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/x_days_equals"
            android:textSize="22sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/x_days_value"
            android:inputType="numberDecimal"
            android:ems="10"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/custom_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/date_from"
            android:textSize="22sp"/>
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filter_dateFrom_datePicker"
            android:spinnersShown="true"
            android:calendarViewShown="false"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/date_to"
            android:textSize="22sp"/>
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filter_dateTo_datePicker"
            android:spinnersShown="true"
            android:calendarViewShown="false"
            />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="10sp"/>

    <Button
        android:id="@+id/filter_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/filter"
        android:enabled="false"
        android:onClick="setOnFilterButtonClicked"/>
</LinearLayout>