<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="statistics"
            type="cardio_app.viewmodel.StatisticsViewModel"/>
    </data>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_statistics_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cardio_app.activity.statistics.StatisticsActivity"
        tools:showIn="@layout/activity_statistics"
        >

        <!--Start of counter stats-->

        <TextView android:text="@string/statistics_measure_counter"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TableRow>
            <TextView android:text="@string/statistics_counter_total"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView android:text="@{statistics.totalCnt}"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </TableRow>
        <TableRow>

            <TextView android:text="@string/statistics_counter_well"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView android:text="@{statistics.wellCnt}"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/statistics_counter_middle"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView android:text="@{statistics.middleCnt}"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/statistics_counter_bad"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView android:text="@{statistics.badCnt}"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/statistics_counter_bad_diff"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView android:text="@{statistics.badDiffCnt}"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </TableRow>
        <TableRow>


            <TextView android:text="@string/statistics_counter_arrhythmia"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView android:text="@{statistics.arrhythmiaCnt}"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </TableRow>
        <TableRow>


            <TextView android:text="@string/statistics_counter_no_arrhythmia"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView android:text="@{statistics.noArrhythmiaCnt}"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </TableRow>
        <TableRow>


            <TextView android:text="@string/statistics_counter_errors"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView android:text="@{statistics.unknownCnt}"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </TableRow>


        <!--End of counter stats-->

        <Space android:minHeight="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />





        <TextView android:text="@string/statistics_last_measure"
            android:textStyle="bold"/>
        <TextView
            android:text="@{statistics.lastMeasureStr}"
            android:layout_gravity="end"/>
        <Space android:minHeight="20sp"/>



        <TextView android:text="@string/statistics_last_bad_condition_measure"
            android:textStyle="bold"/>
        <TextView
            android:text="@{statistics.lastBadConditionMeasureStr}"
            android:layout_gravity="end"/>
        <Space android:minHeight="20sp"/>



        <TextView android:text="@string/statistics_last__middle_condition_measure"
            android:textStyle="bold"/>
        <TextView
            android:text="@{statistics.lastMiddleConditionMeasureStr}"
            android:layout_gravity="end"/>
        <Space android:minHeight="20sp"/>



        <TextView android:text="@string/statistics_last_well_condition_measure"
            android:textStyle="bold"/>
        <TextView
            android:text="@{statistics.lastWellConditionMeasureStr}"
            android:layout_gravity="end"/>
        <Space android:minHeight="20sp"/>



        <TextView android:text="@string/statistics_bad_difference_well_condition_measure"
            android:textStyle="bold"/>
        <TextView
            android:text="@{statistics.lastBadDiffConditionMeasureStr}"
            android:layout_gravity="end"/>
        <Space android:minHeight="20sp"/>



        <TextView android:text="@string/statistics_arrhythmia_measure"
            android:textStyle="bold"/>
        <TextView
            android:text="@{statistics.lastArrhythmiaMeasureStr}"
            android:layout_gravity="end"/>
        <Space android:minHeight="20sp"/>



        <TextView android:text="@string/statistics_no_arrhythmia_measure"
            android:textStyle="bold"/>
        <TextView
            android:text="@{statistics.lastNoArrhythmiaMeasureStr}"
            android:layout_gravity="end"/>
        <Space android:minHeight="20sp"/>


    </TableLayout>
</layout>