<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/collected_charts_add_new_btn"
        android:icon="@drawable/add"
        android:title="@string/add_chart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/collected_charts_add_new"
        android:title="@string/collected_charts_add_new_chart" />

    <item
        android:id="@+id/collected_charts_remove_all"
        android:title="@string/collected_charts_remove_all" />


    // TODO
    <!--<item-->
    <!--android:id="@+id/collected_charts_select_all"-->
    <!--android:title="@string/collected_charts_select_all"/>-->

    <!--<item-->
    <!--android:id="@+id/collected_charts_deselect_all"-->
    <!--android:title="@string/collected_charts_deselect_all"/>-->

</menu>